<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorPrimary" />

        <TextView
            android:id="@+id/toolbarText"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/light_red"
            android:textSize="32sp" />

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_bg"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@android:color/darker_gray">

        </ImageView>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="270dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">


            <EditText
                android:id="@+id/edt_user_name"
                style="@style/LoginSignUpInput"
                android:hint="@string/user_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_county_code"
                    style="@style/CountyCode"
                    android:inputType="phone"
                     />


                <EditText
                    android:id="@+id/edt_phone_number"
                    style="@style/PhoneNumber"
                    android:hint="@string/mobile_number"
                    android:inputType="phone" />

            </LinearLayout>

            <!-- <Spinner
                 android:id="@+id/spinnerOfferType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="8dp"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginLeft="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"></Spinner>

             <EditText
                 android:id="@+id/edt_phone_number"
                 style="@style/LoginSignUpInput"
                 android:hint="@string/phone_number"
                 android:inputType="number" />
 -->
            <Button
                android:id="@+id/btnSignIn"
                style="@style/ButtonOrange"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="30dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnCreateAccount"
                style="@style/ButtonOrange"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="30dp"
                android:text="@string/create_an_account"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!-- </android.support.v4.widget.NestedScrollView>
 -->
</android.support.design.widget.CoordinatorLayout>

