<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        android:theme="@style/myCustomMenuTextApearance"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolbarColoredBackArrow"
        app:titleTextColor="@color/red">

        <TextView
            android:id="@+id/toolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/app_name"
            android:textSize="35sp" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="100dp"
        android:background="@color/app_background"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/lyt_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border_edittext"
                android:paddingEnd="2dp"
                android:paddingStart="2dp"
                android:textColorHint="@color/gray_color"
                android:theme="@style/TextInputLayoutThem"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:background="@android:color/transparent"
                    android:id="@+id/edt_user_name"
                    style="@style/TextInputLayoutThem"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:hint="@string/name"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_border_edittext"
                android:textColorHint="@color/gray_color"
                android:theme="@style/TextInputLayoutThem"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/edt_password"
                    style="@style/TextInputLayoutThem"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:hint="@string/password"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:paddingEnd="2dp"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:paddingStart="2dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@color/button_orange"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_your_email_or_password"
                android:textColor="@color/sign_in_text_color" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/new_to_movieflix_sign_up_now"
                android:textColor="@color/sign_in_text_color"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>