<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".fragment.HomeFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="?attr/colorPrimary"
                    android:textStyle="bold">

                    <TextView
                        android:id="@+id/toolbarText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/light_red"
                        android:textSize="32sp" />

                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lytMyList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="45dp"
                        android:layout_height="35dp"
                        android:background="@color/app_background"
                        android:src="@drawable/ic_check_mark_black_outline" />

                    <TextView
                        android:id="@+id/tv_my_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/my_list"
                        android:textColor="@color/more_text_color"
                        android:textSize="20sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/hr_color" />


                <TextView
                    android:id="@+id/tv_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:paddingBottom="10dp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/more_text_color"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/border_color" />

                <TextView
                    android:id="@+id/tv_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:paddingBottom="10dp"
                    android:text="@string/about_us"
                    android:textColor="@color/more_text_color"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/border_color" />


                <TextView
                    android:id="@+id/tv_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/help"
                    android:textColor="@color/more_text_color"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/border_color" />

                <TextView
                    android:id="@+id/tv_sign_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/sign_out"
                    android:textColor="@color/more_text_color"
                    android:textSize="20sp"
                    android:visibility="visible" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</FrameLayout>